<resources>
    <string name="wallapop">M874.323897,513.518484 C860.358769,445.332884 816.382769,412.921263
    805.267282,406.191832 C800.657846,403.400084 797.676103,399.358653 797.88841,392.435874
    C801.757128,267.085474 710.243077,158.867537 582.509333,159.174063 C500.917128,159.372126
    449.925538,194.844295 407.832,243.511242 C403.062154,249.028716 394.697231,248.443958
    388.219487,245.076884 C305.763897,202.332968 207.573949,231.137011 166.022974,310.371705
    C130.01559,379.038316 144.36759,457.320421 202.808821,508.302821 C208.923282,513.617516
    210.187692,522.950063 205.809436,529.764379 C154.784821,609.4848 177.973538,715.561768
    257.71159,766.5536 C301.140308,794.348463 354.773949,801.186358 403.746256,785.058358
    C412.384821,782.544842 418.650256,785.063074 422.839795,791.594442 C475.761026,869.508716
    581.966769,891.790821 661.275487,840.157642 C704.27959,812.16 732.742974,766.610189
    738.87159,715.679663 C739.626462,709.492547 743.735795,703.578947 749.779487,702.036884
    C867.836718,671.8464 884.052308,561.025347 874.323897,513.518484 L874.323897,513.518484 Z
    M684.063179,687.984084 C683.473436,709.638989 676.924923,730.600674 665.106462,748.761179
    C629.740718,803.1248 556.985231,818.521853 502.596718,783.172295 C448.212923,747.822737
    432.808821,675.095832 468.174564,620.727495 C475.581744,609.466189 472.397128,594.361516
    461.111795,587.042611 C449.826462,579.704842 434.342154,582.647495 427.005744,593.937095
    C401.193846,629.234779 389.229128,672.785095 394.371692,716.292968 C395.376615,724.753095
    389.644308,732.548295 381.274667,734.236547 C352.188513,740.126568 321.941744,735.278737
    296.134564,720.631495 C237.032821,687.0928 216.316308,612.026863 249.865641,552.938021
    C253.578667,546.401937 260.542359,542.450105 268.388308,544.477895 C283.509333,548.674947
    299.139897,550.693305 314.831795,550.547116 C327.188103,550.448084 337.114667,540.361011
    337.01559,528.000926 C336.916513,516.282189 327.758974,506.624253 316.053744,505.883874
    C293.964308,504.488 273.483692,499.748632 255.404513,486.964126 C200.129026,447.874947
    190.947897,375.662063 229.285949,323.340379 C265.873641,273.400168 339.294706,263.102494
    392.32445,305.252221 C392.557946,305.437801 394.130815,307.005964 394.371699,307.181664
    C404.775463,314.770126 422.862026,310.613648 428.736673,299.141666 C440.24375,276.656781
    458.521641,261.568253 468.075487,254.626611 C543.430564,199.885726 639.874872,207.945011
    700.349538,278.762021 C762.522667,351.564379 752.445128,457.796968 673.579897,521.469558
    C663.106051,529.924968 662.237949,545.755874 671.055795,555.946695 C679.43959,565.647074
    694.447385,567.340042 704.685333,559.615579 C731.558769,539.328253 756.507282,511.646568
    771.939692,481.7296 C773.345641,478.985011 775.737641,475.754695 778.398564,474.2032
    C786.183179,469.577011 796.180513,473.241179 800.799385,481.022232 C810.357949,497.159663
    818.708718,521.238484 819.793846,539.955453 C823.549333,604.698526 772.458667,660.344842
    707.700103,664.112758 C692.470564,664.706947 684.119795,673.341558 684.063179,687.984084 Z
  </string>
    <string name="grav">
    M993.453,403.916 Q1002.92,412.333,1007.13,423.904
Q1011.33,433.373,1010.28,448.099 Q1009.23,462.826,996.608,481.762
Q986.088,499.648,963.996,521.739 Q958.738,526.997,954.527,532.259
Q951.373,536.466,946.111,540.676 Q929.277,557.51,916.654,569.081
Q904.031,579.601,901.928,581.704 Q885.098,596.431,865.109,613.264
Q846.173,630.098,834.601,637.459 Q820.926,646.928,809.354,649.031
Q796.731,652.186,786.211,644.824 Q775.691,636.408,771.485,624.836
Q768.33,616.419,775.691,600.641 Q782.005,583.808,791.469,568.029
Q800.938,551.2,809.354,538.573 Q817.771,525.95,817.771,523.846
Q823.029,514.378,830.394,504.909 Q837.76,494.389,849.331,470.195
Q851.435,465.988,850.383,463.881 Q850.383,461.778,850.383,459.675
L847.228,456.52 L846.176,455.468 L846.176,454.416 L849.331,451.262
L851.435,449.158 Q853.538,450.21,856.693,451.262
Q859.847,452.313,863.006,454.416 Q867.213,456.52,870.371,458.623
Q872.474,459.675,873.526,461.778 Q875.629,463.881,878.788,465.984
Q886.153,472.298,889.308,487.024 Q893.514,501.751,885.102,513.323
Q869.323,536.466,852.49,558.557 Q835.66,580.649,821.982,605.896
Q816.72,614.312,820.93,616.415 Q826.188,618.519,835.656,611.154
Q845.125,603.788,850.383,599.582 Q860.903,591.165,873.526,579.594
Q887.201,568.022,900.876,555.399 Q917.709,539.621,931.384,521.735
Q946.111,503.85,956.631,487.021 Q967.151,470.187,974.516,456.512
Q981.881,441.786,985.036,432.317 Q987.139,427.056,987.139,422.849
Q987.139,418.642,987.139,415.484 L987.139,408.119 L993.453,403.912
L993.453,403.912 Z M823.953,571.181 Q826.057,573.284,826.057,575.387
Q826.057,578.542,822.902,582.752 Q820.798,585.907,809.227,597.479
Q797.655,607.999,781.877,620.622 Q767.151,633.245,750.317,643.765
Q734.539,653.234,721.912,653.234 L719.809,653.234
Q707.185,650.079,698.769,644.817 Q691.404,638.504,686.145,633.245
Q681.939,626.932,679.832,622.725 Q678.78,618.519,678.78,618.519 L678.78,616.415
Q678.78,610.102,680.883,599.586 Q684.038,589.066,689.3,580.649
Q671.415,600.637,654.585,616.415 Q639.859,630.09,624.077,641.662
Q608.299,652.182,595.672,652.182 Q591.465,652.182,587.255,650.079
Q578.838,647.976,574.632,642.714 Q569.37,636.4,567.267,631.142
Q564.112,624.828,564.112,620.622 Q563.06,615.364,563.06,614.309
Q563.06,601.685,572.529,580.645 Q581.997,558.554,609.347,523.839
Q610.398,522.787,620.918,510.164 Q631.438,497.541,648.268,483.866
Q665.098,469.139,686.138,457.568 Q707.178,445.996,730.321,445.996
Q738.738,445.996,748.206,451.254 Q757.675,455.461,766.091,462.826
Q774.508,469.139,779.766,477.552 Q785.028,485.969,785.028,493.33
Q785.028,501.747,776.611,512.267 L772.405,518.581 L765.04,514.374
Q765.04,513.323,766.091,511.219 Q766.091,509.116,766.091,508.064
Q767.143,505.961,767.143,503.858 Q767.143,499.651,765.04,495.441
Q762.936,491.235,754.52,491.235 Q746.103,491.235,733.48,495.441
Q720.856,499.648,706.13,508.064 Q691.404,516.481,675.622,529.104
Q660.895,541.728,648.272,558.561 Q627.232,585.911,619.867,600.641
Q612.502,614.316,612.502,619.578 Q612.502,625.891,617.76,625.891
Q620.915,625.891,632.486,615.372 Q645.109,604.851,659.836,589.073
Q675.614,573.295,692.448,556.462 Q709.277,538.577,721.904,523.85
Q725.059,520.695,733.476,521.747 Q741.893,522.798,749.254,527.005
Q757.671,530.16,763.981,536.473 Q770.294,542.787,770.294,549.097
Q770.294,552.251,769.243,553.303 Q756.619,571.188,743.996,588.018
Q731.373,604.848,731.373,616.423 Q731.373,621.681,736.631,621.681
Q742.944,621.681,753.464,615.368 Q763.984,609.054,774.504,601.693
Q785.024,593.276,793.441,585.915 Q802.909,577.498,807.116,574.343
L808.168,572.24 Q809.219,571.188,811.322,570.137
Q814.477,568.033,816.581,568.033 Q818.684,568.033,822.894,570.137
L823.946,571.188 Z M575.556,532.255 Q567.139,542.775,557.671,551.192
Q549.254,558.557,538.734,563.816 Q528.214,569.074,515.591,569.074
Q498.761,569.074,488.241,561.709 Q481.927,557.502,477.721,553.292
L481.927,544.875 Q486.134,546.978,486.134,546.978
Q490.34,546.978,498.757,539.613 Q508.225,532.248,516.642,522.783
Q526.111,513.315,532.42,503.847 Q539.785,493.327,540.837,488.069
Q539.785,488.069,539.785,487.017 Q537.682,484.914,537.682,484.914
Q537.682,484.914,518.745,499.64 Q500.86,513.315,476.665,533.303
Q452.471,553.292,429.327,576.435 Q406.184,598.527,397.767,615.36
L397.767,616.412 Q396.716,621.67,394.612,625.88 Q390.406,636.4,390.406,643.765
Q390.406,647.972,390.406,649.023 Q391.458,649.023,393.561,653.23
L388.299,659.543 Q390.402,657.44,385.144,656.388
Q379.886,655.337,373.572,652.182 Q366.207,649.027,360.949,642.714
Q354.636,635.349,354.636,620.622 Q354.636,607.999,359.894,595.375
Q361.997,589.062,365.156,583.804 Q365.156,582.752,366.207,582.752
Q366.207,582.752,366.207,581.701 Q372.521,568.026,384.092,549.089
Q395.664,529.101,406.184,511.219 Q416.704,493.334,423.018,479.659
Q430.383,464.933,428.276,460.723 L428.276,457.568
Q428.276,452.31,426.172,451.254 Q424.069,449.151,424.069,448.099
L430.383,441.786 Q438.799,447.048,452.474,457.564
Q466.149,467.032,466.149,489.124 Q466.149,499.644,458.784,513.319
Q451.419,525.942,445.109,534.359 Q461.943,519.632,478.772,504.902
Q495.602,490.176,510.332,478.604 Q525.059,467.032,536.631,459.667
Q549.254,452.302,557.671,452.302 Q558.722,452.302,565.036,454.405
Q571.349,455.457,578.711,459.667 Q586.076,463.874,591.334,472.29
Q597.647,479.655,597.647,491.227 Q597.647,501.747,589.231,513.319
Q580.814,523.839,575.556,532.255 Z M103.744,720.56
Q96.3791,717.405,85.8591,705.834 Q75.3391,695.314,67.974,676.377
Q60.6088,657.44,58.5056,631.142 Q56.4024,603.792,66.9223,568.022
Q77.4424,532.255,101.637,488.072 Q126.884,443.889,173.17,391.289
Q231.028,326.066,271.005,295.557 Q310.982,265.049,338.332,256.632
Q366.737,247.164,382.515,253.477 Q399.349,259.791,409.865,268.204
Q414.071,271.359,420.385,277.672 Q428.801,285.037,429.853,294.502
Q430.905,303.97,427.75,313.439 Q424.595,322.907,419.333,331.324
Q414.075,338.689,409.865,342.895 Q398.293,356.57,393.035,363.936
Q387.777,370.249,383.567,374.455 Q380.412,378.662,376.201,382.872
Q373.047,386.027,366.733,394.444 Q358.316,404.964,349.903,416.535
Q341.487,427.056,334.125,437.576 Q325.708,449.147,318.347,460.719
Q316.244,462.822,314.141,467.032 Q312.037,470.187,309.934,474.397
Q307.831,477.552,306.779,482.814 Q306.779,487.021,307.831,491.231
Q307.831,493.334,310.986,496.489 L304.672,501.751
Q302.569,500.699,299.41,498.596 Q297.307,496.493,295.204,495.441
Q293.101,494.389,290.997,492.286 Q288.894,490.183,283.632,485.973
Q279.426,480.715,276.267,470.195 L276.267,469.143
Q274.164,461.778,276.267,454.416 Q278.37,447.051,280.474,440.742
Q283.628,433.376,287.839,426.015 Q292.045,420.757,298.359,409.185
Q304.672,397.614,310.982,389.197 Q313.085,387.094,314.137,383.935
Q316.24,380.78,318.343,378.677 Q320.447,375.522,321.498,373.419
Q332.018,358.692,338.328,350.276 Q345.693,340.807,352.003,333.446
Q358.316,325.029,366.729,316.612 Q375.146,307.144,387.769,292.417
Q390.924,288.211,390.924,287.156 Q390.924,286.104,389.873,286.104
Q380.404,286.104,365.678,293.469 Q358.313,297.676,350.951,301.886
Q316.236,322.926,288.883,346.069 Q261.533,369.212,240.493,391.304
Q220.505,412.344,206.83,430.225 Q194.206,447.055,186.841,455.472
Q158.436,490.187,134.241,532.267 Q111.098,574.347,99.5265,611.165
Q89.0065,647.983,94.2684,672.182 Q99.5265,697.428,127.932,698.48
Q144.761,698.48,164.75,689.012 Q185.79,679.543,206.83,663.765
Q227.87,647.987,248.91,627.999 Q269.95,608.01,288.887,586.97
Q289.938,585.918,296.252,578.553 Q303.617,570.137,305.72,568.033
Q307.823,565.93,307.823,564.878 Q309.927,560.672,309.927,558.565
Q309.927,555.41,301.51,554.358 Q283.625,554.358,264.692,559.62
Q245.755,564.878,219.457,564.878 Q206.834,564.878,194.21,563.827
Q182.639,561.724,173.17,556.462 Q163.702,551.204,158.444,541.735
Q153.186,532.267,155.289,516.489 L162.654,514.385
Q162.654,518.592,166.861,521.75 Q171.067,523.854,178.432,524.905
Q186.849,525.957,203.679,522.802 Q206.834,521.75,218.405,519.647
Q229.977,516.492,243.652,513.334 Q258.378,510.179,272.057,509.127
Q286.783,508.076,294.148,510.179 Q300.462,512.282,307.823,515.441
Q316.24,518.596,323.601,525.961 Q325.705,527.012,329.915,534.378
Q334.121,541.743,336.228,552.263 Q338.332,562.783,336.228,573.303
Q334.125,583.823,324.657,591.188 Q274.164,649.046,235.239,677.451
Q197.369,705.856,168.964,716.376 Q141.614,726.896,124.78,724.793
Q109.002,722.69,103.741,720.586 Z
  </string>
    <string name="circle">
M527.023,71.8233 C780.213,71.8233,985.464,277.075,985.464,530.265
C985.464,783.455,780.213,988.707,527.023,988.707
C273.832,988.707,68.5809,783.455,68.5809,530.265
C68.5809,277.075,273.832,71.8233,527.023,71.8233 Z
  </string>
    <string name="app_name">OldDriver</string>
    <string name="home">首页</string>
    <string name="search">搜索</string>
    <string name="project">项目</string>
    <string name="wechat">公众号</string>
    <string name="me">我</string>
</resources>